--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,7 @@
 @import "settings/colors";
 @import "settings/fonts";
 @import "partials/app";
+@import "modules/base";
+@import "modules/measurments";
+@import "modules/grid";
+@import "modules/mixins";
