--- a/src/scss/partials/_app.scss
+++ b/src/scss/partials/_app.scss
@@ -3,10 +3,15 @@ body{
 }
 
 .app {
+  @extend %wrapper;
   width: 100vw;
+  background: white;
 }
 
 .app-header {
-  height: $app-header-height;
+  width: 100%;
+  background: white;
+  height: 80vh;
+  max-height: $header-max-height;
 }
 
