--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,1 +1,9 @@
-
+.header-container {
+  padding: 0 calc(100% * (1 / 14));
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: 67% 100%;
+  background-color:white;
+  background-position: -70%;
+}
