--- a/src/scss/modules/_mixins.scss
+++ b/src/scss/modules/_mixins.scss
@@ -22,6 +22,10 @@
   }
 }
 
+@mixin btn-border($color){
+  border: 0.75px solid $color;
+}
+
 @function strip-unit($value) {
   @return $value / ($value * 0 + 1);
 }
