--- a/src/scss/modules/_measurments.scss
+++ b/src/scss/modules/_measurments.scss
@@ -3,6 +3,7 @@ $screen-breakpoint-sm: 425px;
 $screen-breakpoint-md: 768px;
 $screen-breakpoint-lg: 1024px;
 $screen-breakpoint-xl: 1440px;
+$screen-breakpoint-xxl: 1900px;
 
 $app-max-width: 1900px;
 $header-max-height: 963px;
