Creating three columns section content and adding basic styling

--- a/src/scss/modules/_measurments.scss
+++ b/src/scss/modules/_measurments.scss
@@ -7,3 +7,5 @@ $screen-breakpoint-xxl: 1900px;
 
 $app-max-width: 1900px;
 $header-max-height: 963px;
+$three-columns-height: 384px;
+$simple-steps-height: 624px;
