--- a/src/scss/partials/_app.scss
+++ b/src/scss/partials/_app.scss
@@ -16,3 +16,10 @@ body{
   max-height: $header-max-height;
 }
 
+.app-simple-step-section {
+  width: 100%;
+  background: white;
+  height: 120vh;
+  max-height: calc(#{$three-columns-height} + #{$simple-steps-height} + 55px);
+}
+
