Changing header bckg image to more responsive one

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -6,6 +6,7 @@
   background-size: 67% 100%;
   background-color:white;
   background-position: -70%;
+  @include fluid-background-image("../assets/images/Hero-Image.png", "../assets/images/Hero-Image@2x.png")
 }
 
 %header__btn {
