Creating and styling about us section

--- a/src/scss/modules/_measurments.scss
+++ b/src/scss/modules/_measurments.scss
@@ -9,3 +9,4 @@ $app-max-width: 1900px;
 $header-max-height: 963px;
 $three-columns-height: 384px;
 $simple-steps-height: 624px;
+$about-height: 935px;
