--- a/src/scss/partials/_app.scss
+++ b/src/scss/partials/_app.scss
@@ -31,3 +31,10 @@ body{
   max-height: $simple-steps-height;
 }
 
+.app-about-section {
+  width: 100%;
+  background: $color-light;
+  height: 75vh;
+  max-height: $about-height;
+}
+
