Creating who-we-help section title and menu buttons with basic styling

--- a/src/scss/modules/_measurments.scss
+++ b/src/scss/modules/_measurments.scss
@@ -10,3 +10,4 @@ $header-max-height: 963px;
 $three-columns-height: 384px;
 $simple-steps-height: 624px;
 $about-height: 935px;
+$help-height: 862px;
