--- a/src/scss/partials/_app.scss
+++ b/src/scss/partials/_app.scss
@@ -38,3 +38,11 @@ body{
   max-height: $about-height;
 }
 
+.app-help-section{
+  width: 100%;
+  background: white;
+  height: 70vh;
+  max-height: $help-height;
+}
+
+
