Creating contact form with basic styling

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,4 +11,5 @@
 @import "partials/simple-steps";
 @import "partials/about";
 @import "partials/who-whe-help";
+@import "partials/contact";
 @import "modules/list";
