--- a/src/scss/partials/_app.scss
+++ b/src/scss/partials/_app.scss
@@ -44,4 +44,11 @@ body{
   max-height: $help-height;
 }
 
+.app-contact-section{
+  width: 100%;
+  background: white;
+  height: 100vh;
+  max-height: $contact-height;
+}
+
 
