--- a/src/scss/partials/_contact.scss
+++ b/src/scss/partials/_contact.scss
@@ -23,10 +23,30 @@
 .contact-form-section__decoration{
   width: 253px;
   margin-top: 25px;
+  margin-bottom: 25px;
 }
 
-.contact-form-section__contact-form{
+.contact-form-section__decoration__message{
+  font-size: 16px;
+  color: green;
+  font-weight: 700;
+}
 
+.contact-form-section__contact-form__error-section{
+  padding: 0;
+  font-size: 12px;
+  color: red;
+  width: 48%;
+  padding-top: 5px;
+}
+
+.contact-form-section__contact-form__error-section__name{
+  margin-right: 4%;
+}
+
+.contact-form-section__contact-form__error-section__desc{
+  margin-right: 4%;
+  width: 100%;
 }
 
 .contact-form-section__contact-form__input-section{
