Creating login layout

--- a/src/scss/modules/_measurments.scss
+++ b/src/scss/modules/_measurments.scss
@@ -7,8 +7,10 @@ $screen-breakpoint-xxl: 1900px;
 
 $app-max-width: 1900px;
 $header-max-height: 963px;
+$header-login-max-height: 150px;
 $three-columns-height: 384px;
 $simple-steps-height: 624px;
 $about-height: 935px;
 $help-height: 862px;
 $contact-height: 1112px;
+$login-height: 946px;
