--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -9,6 +9,13 @@
   @include fluid-background-image("../assets/images/Hero-Image.png", "../assets/images/Hero-Image@2x.png")
 }
 
+.header-container--login{
+  padding: 0 calc(100% * (1 / 14));
+  width: 100%;
+  height: 100%;
+  background-color:white;
+}
+
 .header__top-menu__login-register{
   display: flex;
   justify-content: flex-end;
