--- a/src/scss/partials/_login.scss
+++ b/src/scss/partials/_login.scss
@@ -61,6 +61,12 @@
   padding: 31px 67px 40px;
 }
 
+.login-form__form__repeated-password{
+  padding-bottom: 40px;
+  padding-left: 67px;
+  padding-right: 67px;
+}
+
 .login-form__btn-section{
   margin-top: 40px;
   width: 100%;
