--- a/src/scss/partials/_login.scss
+++ b/src/scss/partials/_login.scss
@@ -97,3 +97,22 @@
 .login-form__btn--register{
   left: 0;
 }
+
+.logout-title{
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  @include fluid-type(768px, 1400px, 36px, 40px);
+}
+
+.logout-section{
+  @extend %center;
+}
+
+.logout-btn{
+  font-size: 18px;
+  height: 50px;
+  padding: 0 16px;
+  @extend %btn-bkg;
+  @include btn-border($color-gray);
+}
