Moving Header to separate component and making it overflow main section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "modules/mixins";
 @import "partials/app";
 @import "partials/header";
+@import "partials/intro";
 @import "partials/three-columns";
 @import "partials/simple-steps";
 @import "partials/about";
