--- a/src/scss/partials/_app.scss
+++ b/src/scss/partials/_app.scss
@@ -9,11 +9,23 @@ body{
   background: white;
 }
 
+.app-main{
+  position: relative;
+  top: -20vh;
+}
+
 .app-header {
   width: 100%;
-  background: white;
-  height: 80vh;
+  background: transparent;
+  height: 20vh;
   max-height: $header-max-height;
+  z-index: 2;
+  position: relative;
+}
+
+.app-intro {
+  width: 100%;
+  height: 100vh;
 }
 
 .app-header--login{
