--- a/src/scss/modules/_base.scss
+++ b/src/scss/modules/_base.scss
@@ -11,6 +11,12 @@
   width: 100%;
 }
 
+%container{
+  padding: 0 calc(100% * (1 / 14));
+  width: 100%;
+  height: 100%;
+}
+
 %center {
   display: flex;
   flex-direction: row;
