--- a/src/scss/partials/_about.scss
+++ b/src/scss/partials/_about.scss
@@ -1,7 +1,5 @@
 .about-container {
-  padding: 0 calc(100% * (1 / 14));
-  width: 100%;
-  height: 100%;
+  @extend %container;
   position: relative;
 }
 
