--- a/src/scss/partials/_contact.scss
+++ b/src/scss/partials/_contact.scss
@@ -1,7 +1,5 @@
 .contact-container {
-  padding: 0 calc(100% * (1 / 14));
-  width: 100%;
-  height: 100%;
+  @extend %container;
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-color:white;
