--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,7 +1,5 @@
 .header-container {
-  padding: 0 calc(100% * (1 / 14));
-  width: 100%;
-  height: 100%;
+  @extend %container;
 }
 
 .header-container--login{
