--- a/src/scss/partials/_three-columns.scss
+++ b/src/scss/partials/_three-columns.scss
@@ -1,7 +1,5 @@
 .three-columns-container{
-  padding: 0 calc(100% * (1 / 14));
-  width: 100%;
-  height: 100%;
+  @extend %container;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-color:$color-yellow;
