Setting signing in logic and displaying signed in user email in header section

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -15,6 +15,10 @@
   align-items: center;
 }
 
+.header__top-menu__login-register__user-email{
+  font-size: 14px;
+}
+
 .header__top-menu__login-register__btn{
   height: 36px;
   padding: 0 0.5rem;
