Creating Form info strap and basic for container

--- a/src/scss/modules/_measurments.scss
+++ b/src/scss/modules/_measurments.scss
@@ -14,3 +14,5 @@ $about-height: 935px;
 $help-height: 862px;
 $contact-height: 1112px;
 $login-height: 946px;
+$form_height: 883px;
+$info-strap-height:179px;
