--- a/src/scss/partials/_form.scss
+++ b/src/scss/partials/_form.scss
@@ -18,6 +18,13 @@
   justify-content: center;
 }
 
+.form__content{
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100%;
+  padding: 0;
+}
+
 .form__info__header{
   font-size: 36px;
   font-weight: bold;
@@ -26,4 +33,56 @@
 .form__info__desc{
   font-size: 22px;
 }
+
+.form__num-section{
+  margin-top: 35px;
+  font-size: 24px;
+}
+
+.form__checkboxes-section{
+  flex-grow: 1;
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
+.form__checkboxes-section__title{
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.form__checkbox-container{
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+
+  input[type='checkbox']{
+    visibility: hidden;
+  }
+
+  input[type="checkbox"]:checked + label{
+    background-color: $color-yellow;
+  }
+
+  .checkboxLabel{
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    @include btn-border($color-dark);
+    background-color: transparent;
+    display:inline-block;
+  }
+
+  .checkboxLabelText{
+    margin-left: 30px;
+    display:inline-block;
+    width: 100%;
+  }
+}
+
+
+
+
 
