Correcting styling in the step forms

--- a/src/scss/partials/_app.scss
+++ b/src/scss/partials/_app.scss
@@ -80,14 +80,14 @@ body{
 .app-form-section{
   width: 100%;
   background: white;
-  height: 85vh;
+  //height: 85vh;
   max-height: $form_height;
 }
 
 .app-info-strap-section{
   width: 100%;
   background: #FAD648;
-  height: 15vh;
+  //height: 15vh;
   max-height: $info-strap-height;
 }
 
