--- a/src/scss/partials/_form.scss
+++ b/src/scss/partials/_form.scss
@@ -1,28 +1,21 @@
 .form{
+  min-height: 85vh;
   padding: 0 calc(100% * (1 / 14));
   width: 100%;
-  height: 100%;
   background-repeat: no-repeat;
   background-size:100% 100%;
   background-color:white;
   @include fluid-background-image("../assets/images/Background-Form.png", "../assets/images/Background-Form@2x.png")
+
 }
 
 .form__info__container{
-  padding: 0 calc(100% * (1 / 14));
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-}
-
-.form__content{
-  display: flex;
-  flex-flow: column nowrap;
-  height: 100%;
-  padding: 0;
+  padding: 35px calc(100% * (1 / 14));
 }
 
 .form__info__header{
@@ -34,29 +27,56 @@
   font-size: 22px;
 }
 
+
+.form__container{
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0;
+}
+
 .form__num-section{
   margin-top: 35px;
   font-size: 24px;
 }
 
-.form__checkboxes-section{
+.form__input-section{
   flex-grow: 1;
   margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 
-  form{
+  form {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 
 }
 
-.form__checkboxes-section__select-container{
-  position: relative;
+.form__input-section__title{
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.form__input-section__subtitle{
+  font-size: 24px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.form__input-section__checkbox-section{
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.form__select-container{
   @include btn-border($color-dark);
   max-width: 300px;
   display: inline-block;
@@ -75,26 +95,20 @@
     background-position: 100%;
     background-image: url("../assets/svg/Icon-Arrow-Down.svg");
 
-    option{
-      width: 50px;
-    }
   }
 }
 
-.form__checkboxes-section__title{
-  font-size: 30px;
-  font-weight: bold;
-  margin-bottom: 30px;
-}
 
-.form__checkbox-container{
+.form__checkbox__container{
 
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+  margin-right: 15px;
 
   input[type='radio']{
+    width: 0;
     visibility: hidden;
   }
 
@@ -103,14 +117,15 @@
   }
 
   input[type='checkbox']{
+    width: 0;
     visibility: hidden;
   }
 
-  input[type="checkbox"]:checked + label{
+  input[type="checkbox"]:checked label{
     background-color: $color-yellow;
   }
 
-  .checkboxLabel{
+  .form__checkbox__label{
     flex-shrink: 0;
     width: 40px;
     height: 40px;
@@ -132,20 +147,19 @@
     padding-right: 1rem;
   }
 
-  .checkboxLabelText{
-    margin-left: 30px;
+  .form__checkbox__label__text{
+    margin-left: 15px;
     display:inline-block;
     width: 100%;
   }
 }
 
-.form__btn__section{
+.form__btn-section{
   margin-top: 50px;
   display: flex;
   flex-flow: row nowrap;
   margin-bottom: 70px;
-  height: 100%;
-  max-height: 79px;
+  height: 79px;
 }
 
 .form__btn{
@@ -154,24 +168,13 @@
   @include btn-border($color-dark);
   max-width: 180px;
   margin-right: 45px;
-  margin-bottom: 10px;
   height: 100%;
-  max-height: 79px;
-  button{
 
+  input, button{
     background-color: transparent;
+    outline: 0;
     height: 100%;
     width: 100%;
-    outline: 0;
-    border: 0;
-    margin-right: 45px;
-  }
-
-  input {
-    background-color: transparent;
-    height: 100%;
-    width: 100%;
-    outline: 0;
     border: 0;
   }
 }
@@ -181,7 +184,7 @@
   flex-flow: row wrap;
 }
 
-.organization-input{
+.form__input-section__organization{
   min-height: 40px;
   outline: 0;
   background-color: transparent;
