Adding logic for yellow strap info bar and fixing minor issues

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -17,6 +17,7 @@
 
 .header__top-menu__login-register__user-email{
   font-size: 14px;
+  margin-right: 5px;
 }
 
 .header__top-menu__login-register__btn{
