--- a/src/scss/modules/_list.scss
+++ b/src/scss/modules/_list.scss
@@ -61,7 +61,10 @@
   width: 40px;
   height: 50px;
   font-size: 18px;
-  @extend %center
+  @extend %center;
+  &:hover{
+    cursor: pointer;
+  }
 }
 
 .list-btn-section__btn--selected{
