--- a/src/scss/modules/_list.scss
+++ b/src/scss/modules/_list.scss
@@ -1,47 +1,49 @@
-.list{
+.list {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.list-item{
+.list-item {
   width: 100%;
   padding: 30px 0;
   border-bottom: 1px solid $color-gray;
-  p{
+  p {
     font-family: $font-alt;
   }
 }
 
-.list-item__titles-section{
+.list-item__titles-section {
   @extend %center--column;
+
   align-items: flex-start;
   padding-left: 0;
 }
 
-.list-item__info-section{
+.list-item__info-section {
   @extend %center--column;
+
   align-items: flex-end;
   padding-right: 0;
 }
 
-.list-item__titles-section__title{
+.list-item__titles-section__title {
   font-size: 26px;
   font-weight: 300;
 }
 
-.list-item__titles-section__subtitle{
+.list-item__titles-section__subtitle {
   font-size: 18px;
   font-style: italic;
   font-weight: 300;
 }
 
-.list-item__info-section__info{
+.list-item__info-section__info {
   font-size: 18px;
   font-weight: 300;
 }
 
-.list-items-section{
+.list-items-section {
   width: 100%;
   list-style: none;
   display: flex;
@@ -52,21 +54,21 @@
   }
 }
 
-.list-btn-section{
+.list-btn-section {
   list-style: none;
   display: flex;
 }
 
-.list-btn-section__btn{
+.list-btn-section__btn {
   width: 40px;
   height: 50px;
   font-size: 18px;
   @extend %center;
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
 }
 
-.list-btn-section__btn--selected{
-  @include btn-border($color-gray)
+.list-btn-section__btn--selected {
+  @include btn-border($color-gray);
 }
