--- a/src/scss/modules/_mixins.scss
+++ b/src/scss/modules/_mixins.scss
@@ -22,7 +22,7 @@
   }
 }
 
-@mixin btn-border($color){
+@mixin btn-border($color) {
   border: 0.75px solid $color;
 }
 
@@ -40,7 +40,9 @@
     & {
       font-size: $min-font-size;
       @media screen and (min-width: $min-vw) {
-        font-size: calc(#{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
+        font-size: calc(
+          #{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)})
+        );
       }
       @media screen and (min-width: $max-vw) {
         font-size: $max-font-size;
@@ -68,9 +70,9 @@
   }
 }
 
-@mixin fluid-background-image($ddp-image, $double-ddp-image){
+@mixin fluid-background-image($ddp-image, $double-ddp-image) {
   background-image: url($ddp-image);
-  @media only screen and (-webkit-min-device-pixel-ratio: 2),only screen and (min-resolution: 2dppx){
+  @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 2dppx) {
     background-image: url($double-ddp-image);
   }
 }
