--- a/src/scss/partials/_contact.scss
+++ b/src/scss/partials/_contact.scss
@@ -1,36 +1,38 @@
 .contact-container {
   @extend %container;
+
   background-repeat: no-repeat;
   background-size: 100% auto;
-  background-color:white;
+  background-color: white;
   background-position: 0;
-  @include fluid-background-image("../assets/images/Background.png", "../assets/images/Background@2x.png")
+  @include fluid-background-image('../assets/images/Background.png', '../assets/images/Background@2x.png');
 }
 
-.contact-form-section{
+.contact-form-section {
   margin-top: 100px;
   position: relative;
 }
 
-.contact-form-section__title{
+.contact-form-section__title {
   @include fluid-type(768px, 1400px, 30px, 38px);
+
   text-align: center;
   @extend %center--column;
 }
 
-.contact-form-section__decoration{
+.contact-form-section__decoration {
   width: 253px;
   margin-top: 25px;
   margin-bottom: 25px;
 }
 
-.contact-form-section__decoration__message{
+.contact-form-section__decoration__message {
   font-size: 16px;
   color: green;
   font-weight: 700;
 }
 
-.contact-form-section__contact-form__error-section{
+.contact-form-section__contact-form__error-section {
   padding: 0;
   font-size: 12px;
   color: red;
@@ -38,36 +40,36 @@
   padding-top: 5px;
 }
 
-.contact-form-section__contact-form__error-section__name{
+.contact-form-section__contact-form__error-section__name {
   margin-right: 4%;
 }
 
-.contact-form-section__contact-form__error-section__desc{
+.contact-form-section__contact-form__error-section__desc {
   margin-right: 4%;
   width: 100%;
 }
 
-.contact-form-section__contact-form__input-section{
+.contact-form-section__contact-form__input-section {
   border-bottom: 1px solid $color-dark;
   width: 48%;
   padding: 0;
 }
 
-.contact-form-section__contact-form__input-section__name{
+.contact-form-section__contact-form__input-section__name {
   margin-right: 4%;
 }
 
-.contact-form-section__contact-form__input{
+.contact-form-section__contact-form__input {
   margin-top: 12px;
   outline: 0;
   border: none;
 }
 
-.contact-form-section__contact-form__textarea-section{
+.contact-form-section__contact-form__textarea-section {
   margin-top: 40px;
   border-bottom: 1px solid $color-dark;
   padding: 0;
-  textarea{
+  textarea {
     border: none;
     margin-top: 12px;
     width: 100%;
@@ -75,32 +77,33 @@
   }
 }
 
-.contact-form-section__contact-form__sbm-btn{
+.contact-form-section__contact-form__sbm-btn {
   display: flex;
   justify-content: flex-end;
   margin-top: 40px;
   padding: 0;
 
-  input{
+  input {
     font-size: 18px;
     font-weight: 300;
     width: 150px;
     height: 50px;
     @include btn-border($color-dark);
+
     background-color: transparent;
-    &:hover{
+    &:hover {
       cursor: pointer;
     }
   }
 }
 
-.contact-form-section__social-media{
+.contact-form-section__social-media {
   position: absolute;
   bottom: 0;
   right: 0;
 
   * {
-    &:hover{
+    &:hover {
       cursor: pointer;
     }
   }
