--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -2,67 +2,64 @@
   @extend %container;
 }
 
-.header-container--login{
+.header-container--login {
   padding: 0 calc(100% * (1 / 14));
   width: 100%;
   height: 100%;
-  background-color:white;
+  background-color: white;
 }
 
-.header__top-menu__login-register{
+.header__top-menu__login-register {
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
-.header__top-menu__login-register__user-email{
+.header__top-menu__login-register__user-email {
   font-size: 14px;
   margin-right: 5px;
 }
 
-.header__top-menu__login-register__btn{
+.header__top-menu__login-register__btn {
   height: 36px;
   padding: 0 0.5rem;
   @extend %btn-bkg;
-  a{
+  a {
     color: $color-gray;
   }
 }
 
-.header__top-menu__login-register__btn--pressed{
-  @include btn-border($color-yellow)
+.header__top-menu__login-register__btn--pressed {
+  @include btn-border($color-yellow);
 }
 
-.header__top-menu__login-register__btn--login{
+.header__top-menu__login-register__btn--login {
   font-size: 14px;
 }
 
-.header__top-menu__login-register__btn--register{
+.header__top-menu__login-register__btn--register {
   font-size: 13px;
 }
 
-.header__top-menu__navigation{
+.header__top-menu__navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.header__top-menu__navigation__btn{
+.header__top-menu__navigation__btn {
   height: 42px;
   flex-grow: 1;
   @extend %btn-bkg;
   @include fluid-type(768px, 1900px, 10px, 18px);
-  a{
+  a {
     color: $color-dark;
   }
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
 }
 
-.header__top-menu__navigation__btn--pressed{
-  @include btn-border($color-dark)
+.header__top-menu__navigation__btn--pressed {
+  @include btn-border($color-dark);
 }
-
-
-
