--- a/src/scss/partials/_intro.scss
+++ b/src/scss/partials/_intro.scss
@@ -4,9 +4,9 @@
   height: 100%;
   background-repeat: no-repeat;
   background-size: 67% 100%;
-  background-color:white;
+  background-color: white;
   background-position: -70%;
-  @include fluid-background-image("../assets/images/Hero-Image.png", "../assets/images/Hero-Image@2x.png")
+  @include fluid-background-image('../assets/images/Hero-Image.png', '../assets/images/Hero-Image@2x.png');
 }
 
 .intro-container--form {
@@ -15,34 +15,37 @@
   height: 100%;
   background-repeat: no-repeat;
   background-size: 80% 100%;
-  background-color:white;
+  background-color: white;
   background-position: -80%;
-  @include fluid-background-image("../assets/images/Header-Form-Background.png", "../assets/images/Header-Form-Background@2x.png")
+  @include fluid-background-image('../assets/images/Header-Form-Background.png', '../assets/images/Header-Form-Background@2x.png');
 }
 
-.intro-content{
+.intro-content {
   padding-top: 20vh;
   @extend %center--column;
 }
 
-.intro__title{
+.intro__title {
   @include fluid-type(768px, 1900px, 18px, 38px);
+
   text-align: center;
 }
 
-.intro__decoration{
-  @extend %center
+.intro__decoration {
+  @extend %center;
 }
 
-.intro__btn-section{
+.intro__btn-section {
   @extend %center;
+
   margin-top: 65px;
 }
 
-.intro__btn-section__btn{
+.intro__btn-section__btn {
   @include fluid-type(768px, 1440px, 18px, 36px);
   @include btn-border($color-dark);
   @extend %btn-bkg;
+
   max-height: 120px;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
@@ -51,31 +54,33 @@
   text-align: center;
   margin: 0 22px;
   color: $color-dark;
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
 }
 
-.intro__dsc-section{
+.intro__dsc-section {
   @extend %center;
+
   font-size: 40px;
   font-weight: 300;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
-.intro__steps-section{
+.intro__steps-section {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.intro__rectangle{
+.intro__rectangle {
   position: relative;
   font-size: 10px;
   width: 15em;
   height: 15em;
   @extend %center--column;
+
   text-align: center;
 
   p {
@@ -83,11 +88,11 @@
   }
 }
 
-#intro__rectangle__text{
-    font-size: 3.2em;
+#intro__rectangle__text {
+  font-size: 3.2em;
 }
 
-.rotated{
+.rotated {
   top: 0;
   left: 0;
   position: absolute;
