--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -1,5 +1,5 @@
-$color-light: #F0F1F1;
-$color-brown: #5E5322;
-$color-yellow: #FAD648;
+$color-light: #f0f1f1;
+$color-brown: #5e5322;
+$color-yellow: #fad648;
 $color-gray: #737373;
-$color-dark: #3C3C3C;
+$color-dark: #3c3c3c;
